# planeshift

./: Jamfile.in  Jamrules  README.md  autogen.sh  configure.ac  eedit.cfg  navgen.cfg  npcclient.cfg  pawseditor.cfg  psclient.cfg  pslaunch.cfg  psserver.cfg  updaterinfo.xml  vfs.cfg  worldeditor.cfg
data/: emotes.xml  guikeys.xml  help.xml  navmesh_to_rename  npcdefs.xml  phonics.xml  prefs.xml  pvp_regions.xml  servers.xml  zoneinfo.xml
data/eedit/: camera.xml  editeffect.xml  eedit.xml  error.xml  filenavigation.xml  fps.xml  imagelist.xml  keys.xml  keys_def.xml  loadeffect.xml  loadmap.xml  partlist.xml  position.xml  render.xml  requestcombo.xml  shortcuts.xml  target.xml
data/gui/: actionlocation.xml  activemagicwindow.xml  attackwindow.xml  bankwindow.xml  birth.xml  bookwriting.xml  borderlist.xml  buddy.xml  charcreate.xml  chardescwindow.xml  charpick.xml  chat.xml  childhood.xml  configactivemagic.xml  configautoexec.xml  configcamera.xml  configchat.xml  configchatbubbles.xml  configchatfilter.xml  configchatfont.xml  configchatlogs.xml  configchattabcompletion.xml  configchattabs.xml  configdetails.xml  configentityinter.xml  configentitylabels.xml  configkeys.xml  configmarriage.xml  configmouse.xml  configpopup.xml  configpvp.xml  configshadows.xml  configshortcut.xml  configsound.xml  configspellchecker.xml  configtextpage.xml  configtooltips.xml  configwindow.xml  containerdesc.xml  control.xml  (+64 more)
data/options/: activemagic_def.xml  autoexec_def.xml  camera_def.xml  chat_def.xml  chatbubbles_def.xml  confirmation_def.xml  controls_def.xml  entityinter_def.xml  entitylabels_def.xml  mouse_def.xml  npcdialog_def.xml  screenmsg_def.xml  shadows_def.xml  shortcutcommands_def.xml  sound_def.xml  tooltips_def.xml
data/pawseditor/: filenavigation.xml  imagelist.xml  keys_def.xml  pebackground.xml  pemenu.xml  peskinselector.xml  pewidgettree.xml
data/races/: descriptions.xml  quickpaths.xml
data/renderlayers/: lighting_basic.xml  lighting_simple.xml
data/schemas/: ApplicativeScript.rng  CommonScripting.rng  ProgressionScript.rng
data/shader/: shaderlist.xml
data/shader-snippets/: mixmode-alpha.xml
data/tests/: rpgrules.xml
docs/: Jamfile  compiling.html  credit.txt  credits_Arcane_Chrysalis_2009.txt  credits_Arcane_Chrysalis_2012.txt  credits_AtomicBlue.txt  credits_CrystalBlue.txt  credits_CrystalBlue_020.txt  credits_MolecularBlue.txt  credits_SteelBlue.txt  history.txt  history2003.txt  history2004.txt  history2005.txt  history2006.txt  history2007.txt  history2008.txt  history2009.txt  svn_guidelines.txt  todo.txt
docs/doxygen/: Jamfile  apihead.html  devapi.dox  doxygen.css  doxygrps
include/: ibgloader.h  idal.h  iscenemanipulate.h  isoundctrl.h  isoundmngr.h  ispellchecker.h
include/msvc/: psconfig.h  psstdint.h
include/tools/: celgraph.h  celhpf.h  celnavmesh.h
lang/: strings.xml
lang/catalan/: stringtable.xml
lang/cesky/: stringtable.xml
lang/deutsch/: stringtable.xml
lang/dutch/: stringtable.xml
lang/english/: stringtable.xml
lang/esperanto/: stringtable.xml
lang/french/: stringtable.xml
lang/italian/: stringtable.xml
lang/portuguese/: stringtable.xml
lang/romanian/: stringtable.xml
lang/russian/: stringtable.xml
lang/spanish/: stringtable.xml
lang/swedish/: stringtable.xml
mk/autoconf/: ac_check_typedef.m4  ac_compile_check_sizeof.m4  ac_need_stdint_h.m4  cel.m4  csbuild.m4  jam.m4  libcurl.m4  type_socklen_t.m4
mk/jam/: crystalspace_staticplugins_msvc.jam  crystalspace_staticplugins_msvc10.jam  crystalspace_staticplugins_msvc8.jam  crystalspace_staticplugins_msvc9.jam  msvcgen.jam  planeshift_staticplugins_msvc.jam  pymarshall.jam
mk/msvc/: OPENAL.fake_stub.c  appccheck-x64.manifest  appccheck.manifest  appccheck.rc  appccheck_static-x64.manifest  appccheck_static.manifest  appccheck_static.rc  appccheck_static_static_glue_app_CRYSTAL.cpp  appccheck_static_static_glue_lib_CRYSTAL.cpp  appccheck_static_staticuse_CRYSTAL.cpp  appeedit-x64.manifest  appeedit.manifest  appeedit.rc  appeedit_static-x64.manifest  appeedit_static.manifest  appeedit_static.rc  appeedit_static_static_glue_app.cpp  appeedit_static_static_glue_app_CRYSTAL.cpp  appeedit_static_static_glue_lib.cpp  appeedit_static_static_glue_lib_CRYSTAL.cpp  appeedit_static_staticuse_CRYSTAL.cpp  appnavgen-x64.manifest  appnavgen.manifest  appnavgen.rc  appnavgen_static-x64.manifest  appnavgen_static.manifest  appnavgen_static.rc  appnavgen_static_static_glue_app.cpp  appnavgen_static_static_glue_app_CRYSTAL.cpp  appnavgen_static_static_glue_lib.cpp  appnavgen_static_static_glue_lib_CRYSTAL.cpp  appnavgen_static_staticuse.cpp  appnavgen_static_staticuse_CRYSTAL.cpp  apppawseditor-x64.manifest  apppawseditor.manifest  apppawseditor.rc  apppsclient-x64.manifest  apppsclient.manifest  apppsclient.rc  apppsclient_static-x64.manifest  (+100 more)
mk/msvc10/: appccheck.vcxproj  appccheck_static.vcxproj  appeedit.vcxproj  appeedit_static.vcxproj  appnavgen.vcxproj  appnavgen_static.vcxproj  apppawseditor.vcxproj  apppsclient.vcxproj  apppsclient_static.vcxproj  apppslaunch.vcxproj  apppslaunch_static.vcxproj  apppsnpcclient.vcxproj  apppsnpcclient_static.vcxproj  apppsserver.vcxproj  apppsserver_static.vcxproj  apptestrpgrules.vcxproj  apptranstool.vcxproj  apptranstool_static.vcxproj  appworldeditor.vcxproj  appworldeditor_static.vcxproj  grpall_psminimal.vcxproj  grpall_psminimalstatic.vcxproj  grpall_psstatic.vcxproj  grpall_pstypical.vcxproj  grpapps_psminimal.vcxproj  grpapps_psminimalstatic.vcxproj  grpapps_psstatic.vcxproj  grpapps_pstypical.vcxproj  grpclient_psminimal.vcxproj  grpclient_psminimalstatic.vcxproj  grpclient_psstatic.vcxproj  grpclient_pstypical.vcxproj  grpclient_static_psminimal.vcxproj  grpclient_static_psminimalstatic.vcxproj  grpclient_static_psstatic.vcxproj  grpclient_static_pstypical.vcxproj  grplibs_psminimal.vcxproj  grplibs_psstatic.vcxproj  (+77 more)
src/: Jamfile
tools/: account-dump  art-convert  creation-convert  faction-convert  jobber.cfg  lm-convert  loot-convert  pscript-validator  quest-manager  serverapi.php  stats-convert
(+1419 files in other folders)
